# idlparser

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  parser_generator.13.sln  parser_generator.sln
ModelBuilder/: CPPParser.cpp  ClientClassWrapper.cpp  ClientClassWrapper.h  ComObjectGen.cpp  ComObjectGen.h  DumpFunction.cpp  DumpFunction.h  MODELBUILDER.vcproj  MODELBUILDER.vcxproj.filters  Readme.txt  StdAfx.cpp  StdAfx.h  b_json.cpp  b_json.h  commonfuncs.cpp  commonfuncs.h  coreclasses.cpp  coreclasses.h  function_timer.cpp  function_timer.h  javascript_json.cpp  javascript_json.h  libraryLoader.cpp  macrohandler.cpp  macrohandler.h  nb_json.cpp  nb_json.h
ObjGen/: ObjGen.13.vcxproj  ObjGen.vcproj  ObjGen.vcxproj.filters  main.cpp  stdafx.h
Preprocessor/: CMakeLists.txt  Preprocessor.13.vcxproj  Preprocessor.vcxproj.filters  main.cpp  stdafx.h
ajax_coroutine_generator/: CMakeLists.txt  main.cpp
ast_parser/: CMakeLists.txt  coreclasses.cpp  coreclasses.h  libraryLoader.cpp
cmake/: Findflatbuffers.cmake
code_generator/: CMakeLists.txt  main.cpp  stdafx.h
com_wrapper_generator/: CMakeLists.txt  main.cpp
commoninclude/: FunctionForwarders.h  InterfaceWrapper.h  InterfaceWrapper1.h
defines/: list  memory  set  string  vector
edl_parser/: CMakeLists.txt  edl_macro_handler.h  flatbuffer_gen.cpp  flatbuffer_gen.h  main.cpp  ocall_gen.cpp  ocall_gen.h
enclave_marshalling_generator/: CMakeLists.txt  enclave_marshalling_generator.cpp  enclave_marshalling_generator.h  main.cpp
generators/: CMakeLists.txt  CPPParser.cpp  CPPParser.h  ClientClassWrapper.cpp  ClientClassWrapper.h  ComObjectGen.cpp  ComObjectGen.h  DumpFunction.cpp  InterpretObject.h  MODELBUILDER.13.vcxproj  StdAfx.h  b_json.cpp  b_json.h  javascript_json.cpp  javascript_json.h  nb_json.cpp  nb_json.h
parsers/: CMakeLists.txt
parsers/ast_parser/: CMakeLists.txt  attributes.h  coreclasses.cpp  coreclasses.h  cpp_parser.cpp  cpp_parser.h  libraryLoader.cpp  library_loader.cpp
parsers/macro_parser/: CMakeLists.txt  macro_parser.cpp  macro_parser.h
preprocessor_utils/: CMakeLists.txt  edl_macro_handler.cpp  edl_macro_handler.h  macrohandler.cpp  macrohandler.h
solution/: solution.sln
submodules/: CMakeLists.txt
tests/coroutine/: CMakeLists.txt  coroutine.cpp
tests/coroutine2/: CMakeLists.txt  coroutine.cpp
tests/fb_gen_test/: CMakeLists.txt
tests/flatbuffer/: CMakeLists.txt
utils/: CMakeLists.txt  commonfuncs.cpp  commonfuncs.h  function_timer.cpp  function_timer.h
